ai: CLAUDE.md 축약
Signed-off-by: debop <sunghyouk.bae@gmail.com>